--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@ body {
     background-color: #222f3e;
     /* color: #1e272e; */
     color: #ffffff;
+    font-weight: bold;
     justify-content: center;
     align-items: center;
     height: 100%;
@@ -19,13 +20,14 @@ button {
 
 input {
     font-size: 20px;
-    background: none;
-    border: 0;
+    /* background: none; */
+    /* border: 0; */
+    /* color: black; */
     
     text-align: center;
 }
 input::placeholder {
-    color: #ffffff;
+    color:black;
     text-align: center;
     text-decoration: underline white;
 }
@@ -60,8 +62,10 @@ li {
 }
 
 .js-weather {
+    display: flex;
+    flex-direction: column;
     position: absolute;
-    right: 0;
+    right: 10px;
     top: 0;
 }
 
